# Collaboard

./: .gitattributes  .gitignore  README.md
Collaboard-back/: .env  Cargo.toml
Collaboard-back/src/: main.rs
Collaboard-back/static/: index.html
Collaboard-back/template/: base.html  draw.html  popup.css
Collaboard-front/: .env  Cargo.toml
Collaboard-front/src/: lib.rs
Collaboard-front/static/: index.html
