[package]
name = "collaboard-back"
version = "0.1.0"
authors = ["Owlullaby <alexwty626@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-utils = "1.0"
actix-files = "0.2.2"
bytes = "0.5.6"
serde = "1.0"
actix-cors = "0.2"
futures = "0.3"
rand = "0.7"
tera = "1.3.1"
serde_json = "1.0"
json-patch = "0.2.6"
dotenv_codegen = "0.15.0"